# ranking_under_lower_uncertainty

./: .gitignore  6a_bootstrap_CI_tests_analysis.ipynb  6b_cov_CI_tests_analysis.ipynb  7_value_gained_simulation.ipynb  81_normal_t_comparison.ipynb  82_partial_noise_reduction.ipynb  Pipfile  README.md  TA1_prob_I(r)_eq_J(s).ipynb  Untitled.ipynb  VIIA_normal_t_comparison.ipynb  VIIB_partial_noise_reduction.ipynb  VI_value_gained_simulation.ipynb  bootstrap_CI_tests_analysis.ipynb  cov_CI_tests_analysis.ipynb  pyproject.toml  run_bootstrap_CI_tests.py  run_cov_CI_tests.py
notebooks/: TA1a_prob_Ir_eq_Js_plots.ipynb  TA1b_mean_kl_divergence.ipynb
output/: README
output/bootstrap_CI_tests/: README
output/cov_CI_tests/: README
output/fig/: README
rulu/: Untitled.ipynb  bootstrap_CI_test.py  covariance_CI_test.py  normal_normal_model.py  normal_normal_partial_model.py  t_t_model.py  temp.py  utils.py
src/: Untitled.ipynb  covariance_CI_test.py  normal_normal_model.py  run_cov_CI_tests.py  test_utils.py
test/unit/: test_bootstrap_CI_test.py  test_normal_normal_model.py  test_utils.py
