[tool.poetry]
name = "ranking_under_lower_uncertainty"
version = "0.1.1"
description = ""
authors = ["Bryan Liu <liu.chbn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "*"

[tool.poetry.dev-dependencies]
numpy = "*"
pandas = "*"
matplotlib = "*"
scipy = "*"
jupyter = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
